gettingStarted changes